# MyLittleWebGL

./: Cargo.toml  README.md  index.html  run.sh
src/: lib.rs  webgl_utils.rs
src/internal/: engine.rs
src/shader/: mod.rs
src/shader/frag/: 01_tri.glsl
src/shader/vert/: 01_tri.glsl
