[package]
name = "my_little_web_gl"
version = "0.0.1"
authors = ["devochanyashka"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
rand = "0.7.3"
console_error_panic_hook = "0.1.6"
getrandom = "0.1.14"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]